[tool.poetry]
name = "split_pool_mod_schema"
version = "0.1.0"
description = "A Schema with processes for splitting, pooling and modifying material entities. Intended to illustrate solutions for NMDC modeling of NEON metadata and metabolomics data"
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]
license = "BSD-3"
readme = "README.md"
include = ["README.md", "src/split_pool_mod_schema/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
linkml-renderer = "^0.1.2"
oaklib = "^0.5.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"
check-jsonschema = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

[tool.poetry.scripts]
dh-json2linkml = 'src.split_pool_mod_schema.datamodel.dh_json2linkml:update_json'
linkml-json2dh = 'src.split_pool_mod_schema.datamodel.linkml_json2dh:extract_lists'
